# NDVI_Implementation

./: pyproject.toml
6190/: ndvi_calculation.ipynb
tests/: test_6190.py
