[tool.poetry]
name = "6190"
version = "0.1.0"
description = ""
authors = ["Shubhrose Singh <shubhroses@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
wheel = "^0.37.1"
pipwin = "^0.5.2"
rasterio = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
